[package]
name = "serial_test"
description = "Allows for the creation of serialised Rust tests"
license = "MIT"
version = "2.0.0"
authors = ["Tom Parker-Shemilt <palfrey@tevp.net>"]
edition = "2018"
repository = "https://github.com/palfrey/serial_test/"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["sequential"]

[dependencies]
lazy_static = "1.2"
parking_lot = "^0.12"
serial_test_derive = { version = "~2.0.0", path = "../serial_test_derive" }
fslock = { version = "0.2", optional = true }
document-features = { version = "0.2", optional = true }
log = { version = "0.4", optional = true }
futures = { version = "^0.3", default_features = false, features = [
    "executor",
], optional = true}
dashmap = { version = "5"}

[dev-dependencies]
itertools = "0.10"
tokio = { version = "^1.27", features = ["macros", "rt"] }

[features]
default = ["logging", "async"]

## Switches on debug logging (and requires the `log` package)
logging = ["log"]

## Enables async features (and requires the `futures` package)
async = ["futures", "serial_test_derive/async"]

## The file_locks feature unlocks the `file_serial`/`file_parallel` macros (and requires the `fslock` package)
file_locks = ["fslock"]

docsrs = ["document-features"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
denylist = ["docsrs"]