[package]
name = "serial_test_derive"
description = "Helper crate for serial_test"
license = "MIT"
version = "0.3.1"
authors = ["Tom Parker-Shemilt <palfrey@tevp.net>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/palfrey/serial_test/"
categories = ["development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
syn = { version="0.15", features=["full"] }