[package]
name = "serial_test_derive"
description = "Helper crate for serial_test"
license = "MIT"
version = "0.4.0"
authors = ["Tom Parker-Shemilt <palfrey@tevp.net>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/palfrey/serial_test/"
categories = ["development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version="1.0", features=["full"] }
proc-macro2 = "1.0"

[dev-dependencies]
env_logger = "0.7"