[package]
name = "serial_test_derive"
description = "Helper crate for serial_test"
license = "MIT"
version = "3.0.0"
authors = ["Tom Parker-Shemilt <palfrey@tevp.net>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/palfrey/serial_test/"
categories = ["development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version="2", features=["full"] }
proc-macro2 = "1.0.60" # Because of https://github.com/dtolnay/proc-macro2/issues/356

[dev-dependencies]
env_logger = "0.10"
prettyplease = "0.2"

[features]
async = []