[package]
name = "serial_test_test"
description = "External testing crate for serial_test"
license = "MIT"
version = "3.1.1"
authors = ["Tom Parker-Shemilt <palfrey@tevp.net>"]
edition = "2018"
rust-version = "1.68.2"

[dependencies]
serial_test = { path="../serial_test", default-features = false }
once_cell = "^1.19"
env_logger = ">=0.6.1"
parking_lot = "^0.12"
lock_api = "^0.4.7"
wasm-bindgen-test = {version="0.3.20", optional=true}
scoped-tls = {version="1", optional=true}
log = { version = ">=0.4.4" }

[dev-dependencies]
tokio = { version = "^1.27", features = ["macros", "rt"] }
actix-rt = { version = "^2.8", features = ["macros"] }
futures-util = {version = "^0.3", default-features = false }

[features]
default = ["serial_test/logging", "async", "serial_test/test_logging"]
file_locks = ["serial_test/file_locks"]
async = ["serial_test/async", "wasm-bindgen-test", "scoped-tls"]

[package.metadata.cargo-all-features]
skip_optional_dependencies = true