[package]
name = "serial_test_test"
description = "External testing crate for serial_test"
license = "MIT"
version = "3.2.0"
authors = ["Tom Parker-Shemilt <palfrey@tevp.net>"]
edition = "2018"
rust-version = "1.68.2"

[dependencies]
serial_test = { path="../serial_test", default-features = false }
once_cell = { version="^1.19", default-features = false }
env_logger = { version=">=0.6.1", default-features = false }
parking_lot = { version="^0.12", default-features = false }
lock_api = { version="^0.4.7", default-features = false }
wasm-bindgen-test = {version="^0.3.50", optional=true, default-features = false }
scoped-tls = { version="1", optional=true, default-features = false }
log = { version = ">=0.4.4" , default-features = false }
scc = { version = "2", default-features = false}

[dev-dependencies]
tokio = { version = "=1.38.2", features = ["macros", "rt", "rt-multi-thread"], default-features = false }
actix-rt = { version = "^2.8", features = ["macros"], default-features = false }
futures-util = {version = "^0.3", default-features = false }

[features]
default = ["serial_test/logging", "async", "serial_test/test_logging"]
file_locks = ["serial_test/file_locks"]
async = ["serial_test/async", "dep:wasm-bindgen-test", "dep:scoped-tls"]

[package.metadata.cargo-all-features]
skip_optional_dependencies = true